# SDV-LOAM

./: CMakeLists.txt  README.md  package.xml
calib/: kitti_360.txt  kitti_carla.txt
calib/KITTI/: 03.txt  09.txt  14.txt
launch/: run.launch
sensor/: 02.txt  03.txt  05.txt  11.txt  kitti_360.txt  kitti_carla.txt
src/: main.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  Reprojector.cpp  Reprojector.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinViewer.cpp  PangolinViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h
